2009-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10519: htmlARea RTE: RTE sometimes overlaps following form element

2009-02-21  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for t3lib_div::trimExplode()
	* Fixed bug #10514: Typos in NEWS.txt
	* Removed top, left, and right borders from the workspace information div in the page tree
	* Follow-up for bug #9705: Moving page in WS will hide it from editors due to missing access settings of placeholder (thanks to Marcus Krause)

2009-02-20  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10452: Fixed flaws in PATH_INFO check for simulateStaticDocuments

2009-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8905: option+space for inserting non-braking space on Mac OSX does not work properly
	* Added feature #10510: htmlArea RTE: Allow to specify default content language in BE
	* Added feature #10513: htmlArea RTE: Improve spell checker configurability

2009-02-19  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up for feature #10374: Add helper function for additional frontend editing controllers and views

2009-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10482: htmlArea RTE: Find & replace sometimes leaves marks in the content

2009-02-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10454: t3lib_div::makeInstanceClassName() allows to bypass checks for t3lib_Singleton

2009-02-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10479: htmlArea RTE: JS error is raised when using the delete icon on a flexform
	* Fixed bug #10453: Wrong text for "upload file" in link popup

2009-02-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10452: Evaluation PATH_INFO in tslib_fe::checkAlternativeIdMethods() sets false positives and should be moved to tx_simulatestatic

2009-02-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up for feature #10374: Add helper function for additional frontend editing controllers and views

2009-02-17  Dmitry Dulepov  <dmitry@typo3.org>